<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/characterLimitShower"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/character_limit"
            android:textSize="@dimen/_13ssp" />

        <SeekBar
            android:id="@+id/charLimit"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_18sdp" />

        <TextView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/_0" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uppercase"
        app:layout_constraintTop_toBottomOf="@+id/characterLimitShower"
        tools:layout_editor_absoluteX="30dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="162dp"
        android:layout_marginStart="@dimen/_20sdp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowercase"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="30dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        tools:layout_editor_absoluteY="206dp"
        android:layout_marginStart="@dimen/_20sdp" />

    <TextView
        android:id="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digits"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="253dp"
        android:layout_marginStart="@dimen/_20sdp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/special_characters"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="296dp"
        android:layout_marginStart="@dimen/_20sdp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/characterLimitShower"
        tools:layout_editor_absoluteX="1dp" />

    <Switch
        android:id="@+id/upperCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"

        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="UseSwitchCompatOrMaterialXml,DuplicateSpeakableTextCheck" />

    <Switch
        android:id="@+id/specialCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/Digits"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/lowerCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/generatePassword"
        android:layout_marginStart="@dimen/_20sdp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_220sdp"
        android:text=""
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="Copy"
        android:onClick="copy"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Generate Password"
        android:onClick="generatePassword"
        android:textAllCaps="false"
        android:id="@+id/generatePassword"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialCharacters" />
</androidx.constraintlayout.widget.ConstraintLayout>